# asesoria

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  SPEC.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/tests/unit/: test_placeholder.py
docs/: plan.md
docs/setup/: dev.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx
