[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "asesoria-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # PyJWT en lugar de python-jose (tiene CVEs conocidos: CVE-2024-33664, CVE-2024-33663)
    "PyJWT>=2.9",
    # bcrypt directamente (passlib sin mantenimiento activo desde 2022)
    "bcrypt>=4.2",
    "pyotp>=2.9",
    "apscheduler>=3.10",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "uvicorn[standard]>=0.32",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.4",
    "factory-boy>=3.3",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pip-audit>=2.7",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
